[project]
name = "blogs"
version = "0.1.0"
description = ""
authors = [
    {name = "Prayas Patnaik",email = "prayaspatnaik21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rawpy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
