[project]
name = "highorderinterpolation"
version = "0.1.0"
description = "Color Filter Array Demosaicking using High Order Interpolation"
authors = [
    {name = "Prayas Patnaik",email = "prayaspatnaik21@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.3,<2.0.0",
    "opencv-python>=4.5.5",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",

    "matplotlib>=3.8",
    "seaborn>=0.13",

    "opencv-python>=4.9",
    "pillow>=10.2",

    "tqdm>=4.66",
    "pyyaml>=6.0",

    "pyqt6>=6.7",

    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "rawpy>=0.15"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
